Corrected error in <div class-container> code

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="left side"></div>
             <div class="right side"></div>
             <div class="title">TITLE</div>
-            <div class="button-container"></div>
+            <div class="button-container">
                 <button class="button"><svg class="svg" cmlns="http://www.w3.org/2000/svg" width="24" height="24"
                 viewBox="0 0 24 24" stroke="red" fill="none" stroke-width="2" stroke-linecap="round"
                 storke-linejoin="round">
@@ -41,6 +41,7 @@
                 <path d="M9 18c-4.51 2-5-2-7-2"></path>
             </svg>
                 </button>
+            </div>   
         </div>
     </div>
 
@@ -51,7 +52,7 @@
             <div class="left side"></div>
             <div class="right side"></div>
             <div class="title">TITLE</div>
-            <div class="button-container"></div>
+            <div class="button-container">
                 <button class="button"><svg class="svg" cmlns="http://www.w3.org/2000/svg" width="24" height="24"
                 viewBox="0 0 24 24" stroke="red" fill="none" stroke-width="2" stroke-linecap="round"
                 storke-linejoin="round">
@@ -76,6 +77,7 @@
                 <path d="M9 18c-4.51 2-5-2-7-2"></path>
             </svg>
                 </button>
+            </div>    
         </div>
     </div>
 
@@ -86,7 +88,7 @@
             <div class="left side"></div>
             <div class="right side"></div>
             <div class="title">TITLE</div>
-            <div class="button-container"></div>
+            <div class="button-container">
                 <button class="button"><svg class="svg" cmlns="http://www.w3.org/2000/svg" width="24" height="24"
                 viewBox="0 0 24 24" stroke="red" fill="none" stroke-width="2" stroke-linecap="round"
                 storke-linejoin="round">
@@ -111,6 +113,7 @@
                 <path d="M9 18c-4.51 2-5-2-7-2"></path>
             </svg>
                 </button>
+            </div>    
         </div>
     </div>
     
@@ -121,7 +124,7 @@
             <div class="left side"></div>
             <div class="right side"></div>
             <div class="title">TITLE</div>
-            <div class="button-container"></div>
+            <div class="button-container">
                 <button class="button"><svg class="svg" cmlns="http://www.w3.org/2000/svg" width="24" height="24"
                 viewBox="0 0 24 24" stroke="red" fill="none" stroke-width="2" stroke-linecap="round"
                 storke-linejoin="round">
@@ -146,6 +149,7 @@
                 <path d="M9 18c-4.51 2-5-2-7-2"></path>
             </svg>
                 </button>
+            </div>    
         </div>
     </div>
 
